logs/param/build.make.037.log.stderr
/home/ros-industrial/HW8/src/param/src/pubvel_spiral.cpp:11:16: error: expected constructor, destructor, or type conversion before ‘(’ token
 ros::param::get(PARAM_NAME, c);
                ^
make[2]: *** [CMakeFiles/pubvel_spiral.dir/src/pubvel_spiral.cpp.o] Error 1
make[1]: *** [CMakeFiles/pubvel_spiral.dir/all] Error 2
make: *** [all] Error 2
